[tool.poetry]
name = "fittingfatigue"
version = "0.1.0"
description = "Code for evaluating insulator attachment point loading, converting to fitting fatigue damage and sorting on most damaged towers"
authors = ["Mr. Lem"]

[tool.poetry.dependencies]
python = "3.9,<3.11"
pandas = "^1.4.1"
openpyxl = "^3.0.9"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
